objects/LG_Product_Load_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Attribute_Category_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Attribute Category Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Attribute Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Attribute Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Category_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Category Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JSON_Field_Location__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JSON Field Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JSON_Field_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JSON Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transform__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Transform</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>LG Product Load Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Attribute_Category_Code__c</columns>
        <columns>Attribute_Code__c</columns>
        <columns>Benefit_Category_Id__c</columns>
        <columns>Benefit_Id__c</columns>
        <columns>JSON_Field_Location__c</columns>
        <columns>JSON_Field_Name__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ATTR-{00000}</displayFormat>
        <label>LG Product Attributes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LG_product_load_mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>